2488.	[func]		Added a tool, dnssec-dsfromkey, to generate DS records
			from keyset and .key files. [RT #18694]

2487.	[bug]		Give TCP connections longer to complete. [RT #18675]

2486.	[func]		The default locations for named.pid and lwresd.pid
			are now /var/run/named/named.pid and
			/var/run/lwresd/lwresd.pid respectively.

			This allows the owner of the containing directory
			to be set, for "named -u" support, and allows there
			to be a permanent symbolic link in the path, for
			"named -t" support.  [RT #18306]

2485.	[bug]		Change update's the handling of obscured RRSIG
			records.  Not all orphand DS records were being
			removed. [RT #18828]

2484.	[bug]		It was possible to trigger a REQUIRE failure when
			adding NSEC3 proofs to the response in
			query_addwildcardproof().  [RT #18828]

2483.	[port]		win32: chroot() is not supported. [RT #18805]

2482.	[port]		libxml2: support versions 2.7.* in addition
			to 2.6.*. [RT #18806]

	--- 9.6.0b1 released ---

2481.	[bug]		rbtdb.c:matchparams() failed to handle NSEC3 chain
			collisions.  [RT #18812]

2480.	[bug]		named could fail to emit all the required NSEC3
			records.  [RT #18812]

2479.	[bug]		xfrout:covers was not properly initalized. [RT #18801]

2478.	[bug]		'addresses' could be used uninitalized in
			configure_forward(). [RT #18800]
	
2477.	[bug]		dig: the global option to print the command line is
			+cmd not print_cmd.  Update the output to reflect
			this. [RT #17008]

2476.	[doc]		ARM: improve documentation for max-journal-size and
			ixfr-from-differences. [RT #15909] [RT #18541]

2475.	[bug]		LRU cache cleanup under overmem condition could purge
			particular entries more aggressively. [RT #17628]

2474.	[bug]		ACL structures could be allocated with insufficient
			space, causing an array overrun. [RT #18765]

2473.	[port]		linux: raise the limit on open files to the possible
			maximum value before spawning threads; 'files'
		        specified in named.conf doesn't seem to work with